--- a/styles.css
+++ b/styles.css
@@ -5,32 +5,41 @@
 
 h1{
     text-align: center;
-    color: cornflowerblue;
+    color:#462066;
     margin: 10px;
 }
 
+body{
+    background-color: #8ED2C9;
+}
+
 .taskList{
-    border: 3px solid red;
+    border: 3px solid #462066;
     width: 80%;
     height: 50px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 30px;
     padding: 8px;
+    padding-top: 10px;
     border-radius: 5px;
 }
 .taskList:nth-child(odd){
-    background-color: rgb(113, 203, 173);
+    background-color: #FCF4D9;
 }
 
 .taskList:nth-child(even){
-    background-color: rgb(107, 131, 234);
+    background-color: #FFB85F;
 }
 
+input{
+    max-height: fit-content;
+}
 
 #add{
     position: relative;
-    background-color: rgb(224, 170, 44);
+    background-color: #462066;
+    color: #FCF4D9;
     padding: 8px;
     margin: 30px;
     width: fit-content;
@@ -39,10 +48,11 @@ h1{
 }
 
 #inputField{
-    margin-left: 8px;
-    background: rgb(78, 198, 51) ;
-    border-radius: 4px;
-    
+    margin-left: 13px;
+    background: #00AAA0 ;
+    color:#462066 ;
+    border-radius: 5px;
+    border: 3px solid #462066;
 }
 
 @keyframes myanime{
